--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,29 +19,26 @@
             color: white;
             -webkit-text-stroke: 0.5px black;
         }
-        .container1 {
-            position: fixed;
-            left: 50px;
-            top: 150px;
-            color: white;
-        }
-        .container2 {
-            position: fixed;
-            left: 200px;
-            top: 150px;
-            color: white;
-        }
-        .container3 {
-            position: fixed;
-            left: 350px;
-            top: 150px;
-            color: white;
-        }
-        .wanttogo {
-            position: fixed;
-            left: 80px;
-            top: 370px;
-        }
+        .container {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically (if needed) */
+    gap: 50px; /* Space between destination cards */
+    margin-top: 50px; /* Adjust spacing from top */
+}
+
+.destination {
+    text-align: center;
+    color: white;
+    -webkit-text-stroke: 0.5px black;
+}
+
+.wanttogo {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    margin-top: 50px; /* Add spacing from the destinations */
+}
+
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,29 +69,34 @@
     <div class="container">
         <h1>Welcome</h1>
     </div>
-    <div class="container1">
-        <img id="image" src="/hiking.png" width="100" height="100">
-        <br>
-        <label class="ml-4 my-2">Hiking</label>
-        <br>
-        <button onclick="location.href = '/hiking';" id="hiking" class="btn btn-secondary ml-3"> View </button>
-    </div>
-    <div class="container2">
-        <img id="image" src="/cities.png" width="100" height="100">
-        <br>
-        <label class="ml-4 my-2">Cities</label>
-        <br>
-        <button onclick="location.href = '/cities';" id="cities" class="btn btn-secondary ml-3"> View </button>
-    </div>
-    <div class="container3">
-        <img id="image" src="/islands.png" width="100" height="100">
-        <br>
-        <label class="ml-4 my-2">Islands</label>
-        <br>
-        <button onclick="location.href = '/islands';" id="islands" class="btn btn-secondary ml-3"> View </button>
+    <div class="container">
+        <div class="destination">
+            <img id="image" src="/hiking.png" width="100" height="100">
+            <br>
+            <label class="my-2">Hiking</label>
+            <br>
+            <button onclick="location.href = '/hiking';" id="hiking" class="btn btn-secondary"> View </button>
+        </div>
+        <div class="destination">
+            <img id="image" src="/cities.png" width="100" height="100">
+            <br>
+            <label class="my-2">Cities</label>
+            <br>
+            <button onclick="location.href = '/cities';" id="cities" class="btn btn-secondary"> View </button>
+        </div>
+        <div class="destination">
+            <img id="image" src="/islands.png" width="100" height="100">
+            <br>
+            <label class="my-2">Islands</label>
+            <br>
+            <button onclick="location.href = '/islands';" id="islands" class="btn btn-secondary"> View </button>
+        </div>
     </div>
     <div class="wanttogo">
-        <button onclick="location.href = '/wanttogo';" id="wanttogo" class="btn btn-secondary ml-3" style="width: 300px;">Want-to-Go List</button>
+        <button onclick="location.href = '/wanttogo';" id="wanttogo" class="btn btn-secondary" style="width: 300px;">
+            Want-to-Go List
+        </button>
     </div>
+    
 </body>
 </html>
