--- a/views/annapurna.ejs
+++ b/views/annapurna.ejs
@@ -32,29 +32,26 @@
             left: 700px;
             top: 150px;
             color: white;
-            width: 300px;
-            text-align: justify;
-            text-justify: inter-word;
+            width: 480px;
+            height: 360px;
         }
         .wanttogo {
             position: fixed;
             left: 30px;
             top: 470px;
         }
-        #my {
-            zoom: 110%;
-        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Annapurna Circuit</title>
+    <title><%= name %></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-        <a class="navbar-brand" style="color: rgb(191, 255, 161)">Annapurna Circuit</a>
+        <a class="navbar-brand" style="color: rgb(191, 255, 161)"><%= name %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -70,18 +67,18 @@
         </div>
     </nav>
     <div class="container1">
-        <img id="image" src="/annapurna.png" width="193" height="300">
+        <img id="image" src="<%= image %>" width="193" height="300">
     </div>
     <div class="container2">
-        Annapurna Circuit has been voted as the best long-distance trek in the world, as it combined a wide variety of climate zones from tropics at 600m above sea level to the arctic at 5416m above sea level at the Thorong La pass and cultural variety from Hindu villages at the low foothills to the Tibetan culture of Manang.
+        <%= description %>
     </div>
     <div class="wanttogo">
         <button id="wanttogo" class="btn btn-secondary ml-3">Add to Want-to-Go List</button>
     </div>
     <div class="video">
-        <video width="480" height="360" controls>
-            <source src="/annapurna.mp4">
-        </video>
+        <iframe width="480" height="360" src="<%= videoUrl %>" 
+                title="<%= name %> Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>                   
     </div>
 </body>
 </html>
