--- a/views/santorini.ejs
+++ b/views/santorini.ejs
@@ -32,30 +32,26 @@
             left: 700px;
             top: 150px;
             color: white;
-            width: 300px;
-            text-align: justify;
-            text-justify: inter-word;
+            width: 480px;
+            height: 360px;
         }
         .wanttogo {
             position: fixed;
             left: 30px;
             top: 470px;
         }
-        #my {
-            zoom: 110%;
-        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Santorini Island</title>
+    <title><%= name %></title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-        <a class="navbar-brand" style="color: rgb(191, 255, 161)">Santorini Island</a>
+        <a class="navbar-brand" style="color: rgb(191, 255, 161)"><%= name %></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -71,18 +67,18 @@
         </div>
     </nav>
     <div class="container1">
-        <img id="image" src="/santorini.png" width="193" height="300">
+        <img id="image" src="<%= image %>" width="193" height="300">
     </div>
     <div class="container2">
-        With its stunning turquoise waters and picturesque villages, great activities including wine-tasting, authentic Greek cuisine, regular boat excursions due to its ideal location for island hopping, small Greek island of Santorini became so popular as a holiday destination.
+        <%= description %>
     </div>
     <div class="wanttogo">
         <button id="wanttogo" class="btn btn-secondary ml-3">Add to Want-to-Go List</button>
     </div>
     <div class="video">
-        <video width="480" height="360" controls>
-            <source src="/santorini.mp4">
-        </video>
+        <iframe width="480" height="360" src="<%= videoUrl %>" 
+                title="<%= name %> Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>                   
     </div>
 </body>
 </html>
