--- a/views/home.ejs
+++ b/views/home.ejs
@@ -95,21 +95,22 @@
             <br>
             <label class="my-2">Hiking</label>
             <br>
-            <button onclick="location.href = '/hiking';" id="hiking" class="btn btn-secondary"> View </button>
+            <button id="hiking" data-destination="hiking" class="btn btn-secondary view-destination"> View </button>
         </div>
         <div class="destination">
             <img id="image" src="/cities.png" width="100" height="100">
             <br>
             <label class="my-2">Cities</label>
             <br>
-            <button onclick="location.href = '/cities';" id="cities" class="btn btn-secondary"> View </button>
+            <button id="cities" data-destination="cities" class="btn btn-secondary view-destination"> View </button>
+
         </div>
         <div class="destination">
             <img id="image" src="/islands.png" width="100" height="100">
             <br>
             <label class="my-2">Islands</label>
             <br>
-            <button onclick="location.href = '/islands';" id="islands" class="btn btn-secondary"> View </button>
+            <button id="islands" data-destination="islands" class="btn btn-secondary view-destination"> View </button>
         </div>
     </div>
     <div class="wanttogo">
@@ -165,6 +166,15 @@ form.addEventListener("submit", async (e) => {
         resultsContainer.innerHTML = `<p class="text-danger">${data.error || data.message}</p>`;
     }
 });
+
+
+document.querySelectorAll('.view-destination').forEach(button => {
+    button.addEventListener('click', () => {
+        const destination = button.dataset.destination; // Retrieve the destination from the data attribute
+        window.location.href = `/${destination}`; // Navigate using GET
+    });
+});
+
 
 </script>
 </body>
