--- a/views/home.ejs
+++ b/views/home.ejs
@@ -153,7 +153,7 @@ form.addEventListener("submit", async (e) => {
                         <div class="card-body">
                             <h5 class="card-title">${destination.name}</h5>
                             <p class="card-text">${destination.description}</p>
-                            <form method="POST" id='searchForm' action='/${destination.name}' class="form-inline my-2 my-lg-0">
+                            <form method="GET" id='searchForm' action='/${destination.name}' class="form-inline my-2 my-lg-0">
                                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">find more about ${destination.name}</button>
                             </form>
                         </div>
